--- a/themes/mini/layouts/partials/profile.html
+++ b/themes/mini/layouts/partials/profile.html
@@ -12,7 +12,7 @@
       
 
         <h2 >{{ .businessNameFull | markdownify }}</h1>
-        <h2>{{ .createdAt | markdownify }}</h2>
+        {{/*  <h2>{{ .createdAt | markdownify }}</h2>  */}}
         <h2>{{ .address | markdownify }}</h2>
         <h2>{{ .country | markdownify }}</h2>
         <h2>{{ .mail }}</h2>
