--- a/themes/mini/layouts/partials/profile.html
+++ b/themes/mini/layouts/partials/profile.html
@@ -18,6 +18,7 @@
         <h2>{{ .mail }}</h2>
         <h2>{{ .dic | markdownify }}</h2>
         <h2>{{ .ico | markdownify }}</h2>
+        <h2>{{ .icodph | markdownify }}</h2>
       {{ end }}
       <h1>---</h1>
     </div>
